# r2ghidra-solana

./: .gitignore  README.md  install.sh  meson.build
.github/workflows/: ci.yml
src/: ArchMap.cpp  Makefile  R2Architecture.cpp  R2Architecture.h  R2PrintC.cpp  R2PrintC.h  R2Scope.cpp  R2Scope.h  SolanaAnchorDispatcherAnalyzer.cpp  SolanaAnchorDispatcherAnalyzer.h  SolanaCallResolver.cpp  SolanaCallResolver.h  SolanaGlobalPtrStringAnalyzer.cpp  SolanaGlobalPtrStringAnalyzer.h  SolanaInputOffsetAnalyzer.cpp  SolanaInputOffsetAnalyzer.h  SolanaStringFromPtrLenAnalyzer.cpp  SolanaStringFromPtrLenAnalyzer.h  SolanaStructFieldHintAnalyzer.cpp  SolanaStructFieldHintAnalyzer.h  core_ghidra.cpp
subprojects/: ghidra-native.mk
sys/: build-sbpf-zigns-by-folder.sh  build-sbpf-zigns.sh  list-sbpf-pubkeys-strings.py
sys/solana-ida-signatures-factory/: .gitignore  README.md  build-rlibs-from-index.sh  build-rlibs-latest.py  build_crate.py  collect-compiled-rlibs.sh  flair-preprocessor.py  get-rlibs-from-crate.py  join-pat-files.py  requirements.txt
sys/solana-ida-signatures-factory/versions/: anchor-attribute-error.txt  anchor-attribute-event.txt  anchor-attribute-program.txt  fetch-crate-versions.py  fetch-solana-releases.py  missing-crates.txt  refresh-solana-anchor-index.sh  solana-account-decoder-client-types.txt  solana-account-decoder.txt  solana-account-info.txt  solana-account.txt  solana-banks-client.txt  solana-banks-interface.txt  solana-cli.txt  (+95 more)
test/source_fixtures/rust/stack_height_syscall/: Cargo.toml
test/source_fixtures/rust/stack_height_syscall/src/: lib.rs
(+7 files in other folders)
